# vilya-blog

./: LICENSE  README.md
flask-csrf-example/: .gitignore  README.md  app.py  exploit.html  pyproject.toml  test_app.py
flask-csrf-example/templates/: base.html  exploit.html  home.html  login.html
hackme-CVE-2021-35042/: README.md  exploit.py  requirements.txt
hackme-CVE-2021-35042/vuln_sample_app/: manage.py
hackme-CVE-2021-35042/vuln_sample_app/articles/: models.py  urls.py  views.py
hackme-CVE-2021-35042/vuln_sample_app/articles/migrations/: 0001_initial.py  0002_seed_sample_articles.py  0003_seed_sample_users.py
hackme-CVE-2021-35042/vuln_sample_app/articles/templates/: base.html
hackme-CVE-2021-35042/vuln_sample_app/articles/templates/articles/: article_detail.html  article_list.html
hackme-CVE-2021-35042/vuln_sample_app/vuln_sample_app/: asgi.py  settings.py  urls.py  wsgi.py
