[tool.poetry]
name = "flask-csrf-example"
version = "0.1.0"
description = "Example of CSRF vulnerability in Flask application."
authors = ["Łukasz Mieczkowski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
Flask-Cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
